style: Fixed AddContentModal alignment issues

--- a/src/components/pages/Home/PostContent/AddContentModal/AddContentModal.css
+++ b/src/components/pages/Home/PostContent/AddContentModal/AddContentModal.css
@@ -1,9 +1,7 @@
-
-.login-form{
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
+.body-modal{
+    padding: 1rem;
 }
+
 
 .body-title{
     text-align: center;
@@ -12,6 +10,13 @@
     color: #333342;
     font-weight: 790;
     line-height: 36px;
+}
+
+.body-form{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
 }
 
 
